# hs-trade

./: .travis.yml  README.md  hs-trade.cabal
src/: Main.hs
src/Bitcointrade/: Order.hs  Ticker.hs
src/Format/: Numeric.hs  String.hs
test/: Spec.hs
test/Bitcointrade/: OrderTest.hs  TickerTest.hs
test/Format/: NumericTest.hs  StringTest.hs
