name:                hs-trade
version:             1.0.1
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hs-trade#readme
license:             BSD3
license-file:        LICENSE
author:              Miguel Fontes
maintainer:          miguel_m_fontes@hotmail.com
copyright:           2018 Miguel Fontes
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hs-trade
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , http-conduit
                     , aeson
                     , bytestring
                     , text
  other-modules:       Bitcointrade.Order
                     , Bitcointrade.Ticker
                     , Format.String
